--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
-    "ejs": "~2.6.1",
     "express": "~4.16.1",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^5.5.1",
@@ -33,6 +32,7 @@
     "nodemailer": "^6.8.0",
     "pm2": "^5.1.0",
     "sequelize": "^6.25.1",
+    "validator": "^13.11.0",
     "winston": "^3.8.2",
     "xss-clean": "^0.1.1"
   },
