--- a/package.json
+++ b/package.json
@@ -1,51 +1,63 @@
 {
-  "name": "giant-fl",
-  "version": "1.0.0",
-  "description": "Team Giant Food Launch API",
-  "main": "bin/www.js",
-  "scripts": {
-    "start": "node bin/www.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/hngx-org/giants-food.git"
-  },
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "blueimp-md5": "^2.19.0",
-    "compression": "^1.7.4",
-    "cookie-parser": "~1.4.4",
-    "cors": "^2.8.5",
-    "debug": "~2.6.9",
-    "dotenv": "^16.0.3",
-    "express": "~4.16.1",
-    "express-mongo-sanitize": "^2.2.0",
-    "express-rate-limit": "^5.5.1",
-    "helmet": "^6.0.1",
-    "http-errors": "~1.6.3",
-    "http-status": "^1.5.3",
-    "joi": "^17.7.0",
-    "jsonwebtoken": "^8.5.1",
-    "morgan": "~1.9.1",
-    "mysql2": "^2.3.3",
-    "nodemailer": "^6.8.0",
-    "pm2": "^5.1.0",
-    "sequelize": "^6.25.1",
-    "validator": "^13.11.0",
-    "winston": "^3.8.2",
-    "xss-clean": "^0.1.1"
-  },
-  "keywords": [
-    "food",
-    "launch",
-    "hng",
-    "api"
-  ],
-  "author": "team-giants",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/hngx-org/giants-food/issues"
-  },
-  "homepage": "https://github.com/hngx-org/giants-food#readme"
+	"name": "giant-fl",
+	"version": "1.0.0",
+	"description": "Team Giant Food Launch API",
+	"main": "bin/www.js",
+	"scripts": {
+		"start": "node bin/www.js",
+		"lint": "eslint . --fix",
+		"format": "prettier --write .",
+		"lint-format": "npm run lint && npm run format",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/hngx-org/giants-food.git"
+	},
+	"dependencies": {
+		"bcryptjs": "^2.4.3",
+		"blueimp-md5": "^2.19.0",
+		"compression": "^1.7.4",
+		"cookie-parser": "~1.4.4",
+		"cors": "^2.8.5",
+		"debug": "~2.6.9",
+		"dotenv": "^16.0.3",
+		"express": "^4.18.2",
+		"express-mongo-sanitize": "^2.2.0",
+		"express-rate-limit": "^5.5.1",
+		"helmet": "^6.0.1",
+		"http-errors": "~1.6.3",
+		"http-status": "^1.5.3",
+		"joi": "^17.7.0",
+		"jsonwebtoken": "^9.0.2",
+		"morgan": "~1.9.1",
+		"mysql2": "^2.3.3",
+		"nodemailer": "^6.8.0",
+		"pm2": "^5.1.0",
+		"sequelize": "^6.25.1",
+		"validator": "^13.11.0",
+		"winston": "^3.8.2",
+		"xss-clean": "^0.1.1"
+	},
+	"keywords": [
+		"food",
+		"launch",
+		"hng",
+		"api"
+	],
+	"author": "team-giants",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/hngx-org/giants-food/issues"
+	},
+	"homepage": "https://github.com/hngx-org/giants-food#readme",
+	"devDependencies": {
+		"@commitlint/cli": "^17.7.1",
+		"@commitlint/config-conventional": "^17.7.0",
+		"eslint": "^8.49.0",
+		"eslint-config-prettier": "^9.0.0",
+		"eslint-plugin-prettier": "^5.0.0",
+		"husky": "^8.0.3",
+		"prettier": "^3.0.3"
+	}
 }
