--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"lint": "eslint . --fix",
 		"format": "prettier --write .",
 		"lint-format": "npm run lint && npm run format",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "mocha"
 	},
 	"repository": {
 		"type": "git",
@@ -54,10 +54,12 @@
 	"devDependencies": {
 		"@commitlint/cli": "^17.7.1",
 		"@commitlint/config-conventional": "^17.7.0",
+		"chai": "^4.3.8",
 		"eslint": "^8.49.0",
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-plugin-prettier": "^5.0.0",
 		"husky": "^8.0.3",
+		"mocha": "^10.2.0",
 		"prettier": "^3.0.3"
 	}
 }
