feat: added the accept invite service feature

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,7 @@ SMTP_PORT=465
 SMTP_USERNAME=user
 SMTP_PASSWORD=pass
 EMAIL_FROM=Giant-fl
+
+#password hash
+BCRYPT_HASH=10
+BCRYPT_SECRET=password
