--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
 		"nodemailer": "^6.8.0",
 		"pm2": "^5.1.0",
 		"sequelize": "^6.25.1",
+		"swagger-jsdoc": "^6.2.8",
+		"swagger-ui-express": "^5.0.0",
 		"validator": "^13.11.0",
 		"winston": "^3.8.2",
 		"xss-clean": "^0.1.1"
